Fixed line break in Keybindings table

--- a/src/app/overlays/settings/settings-keybindings/settings-keybindings.component.scss
+++ b/src/app/overlays/settings/settings-keybindings/settings-keybindings.component.scss
@@ -15,8 +15,7 @@ td {
 
 .action-name {
   padding-left: 0.5rem;
-  width: 25rem;
-  margin-right: 12rem;
+  width: 30rem;
 }
 
 
